[tool.poetry]
name = "login-password"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
